--- a/content/2.python/2.python_advanced/06.Concurrency/concurrency.ipynb
+++ b/content/2.python/2.python_advanced/06.Concurrency/concurrency.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
       "Task 4: starting. \n",
       "Task 4: finishing. \n",
       "\n",
-      "Time spent inside the loop: 0.5237274999999997 seconds.\n"
+      "Time spent inside the loop: 0.5469395001418889 seconds.\n"
      ]
     }
    ],
@@ -103,25 +103,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Task 0: starting. Task 1: starting. \n",
-      "\n",
+      "Task 0: starting. \n",
+      "Task 1: starting. \n",
       "Task 2: starting. \n",
       "Task 3: starting. \n",
       "Task 4: starting. \n",
-      "Task 0: finishing. Task 1: finishing. Task 3: finishing. \n",
+      "Task 4: finishing. \n",
+      "Task 2: finishing. \n",
+      "Task 3: finishing. \n",
+      "Task 1: finishing. \n",
+      "Task 0: finishing. \n",
       "\n",
-      "\n",
-      "Task 4: finishing. Task 2: finishing. \n",
-      "\n",
-      "\n",
-      "Time spent inside the loop: 0.10274862500000026 seconds.\n"
+      "Time spent inside the loop: 0.12407679995521903 seconds.\n"
      ]
     }
    ],
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
       "Task 4: starting. \n",
       "Task 4: finishing. \n",
       "\n",
-      "Time spent inside the loop: 0.5225427499999995 seconds.\n"
+      "Time spent inside the loop: 0.5715846999082714 seconds.\n"
      ]
     }
    ],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -257,13 +257,13 @@
       "Task 2: starting. \n",
       "Task 3: starting. \n",
       "Task 4: starting. \n",
+      "Task 3: finishing. \n",
+      "Task 4: finishing. \n",
+      "Task 2: finishing. \n",
       "Task 1: finishing. \n",
       "Task 0: finishing. \n",
-      "Task 3: finishing. \n",
-      "Task 2: finishing. \n",
-      "Task 4: finishing. \n",
       "\n",
-      "Time spent inside the loop: 0.10432283299999945 seconds.\n"
+      "Time spent inside the loop: 0.12028929986990988 seconds.\n"
      ]
     }
    ],
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
       "Task 4: starting. \n",
       "Task 4: finishing. \n",
       "\n",
-      "Time spent inside the loop: 0.5177888330000009 seconds.\n"
+      "Time spent inside the loop: 0.5422682999633253 seconds.\n"
      ]
     }
    ],
@@ -359,25 +359,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Task 0: starting. Task 1: starting. \n",
-      "\n",
+      "Task 0: starting. \n",
+      "Task 1: starting. \n",
       "Task 2: starting. \n",
       "Task 3: starting. \n",
       "Task 4: starting. \n",
+      "Task 4: finishing. \n",
+      "Task 3: finishing. \n",
+      "Task 2: finishing. \n",
       "Task 1: finishing. \n",
       "Task 0: finishing. \n",
-      "Task 3: finishing. Task 4: finishing. \n",
       "\n",
-      "Task 2: finishing. \n",
-      "\n",
-      "Time spent inside the loop: 0.11432316699999845 seconds.\n"
+      "Time spent inside the loop: 0.12302020005881786 seconds.\n"
      ]
     }
    ],
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -435,13 +435,13 @@
       "Task 2: starting. \n",
       "Task 3: starting. \n",
       "Task 4: starting. \n",
-      "Task 1: finishing. \n",
-      "Task 2: finishing. \n",
-      "Task 3: finishing. \n",
       "Task 4: finishing. \n",
+      "Task 3: finishing. \n",
+      "Task 2: finishing. \n",
+      "Task 1: finishing. \n",
       "Task 0: finishing. \n",
       "\n",
-      "Time spent inside the loop: 0.10353191700000153 seconds.\n"
+      "Time spent inside the loop: 0.11193090002052486 seconds.\n"
      ]
     }
    ],
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Time spent inside the loop: 4.535982041000002 seconds.\n"
+      "Time spent inside the loop: 6.011736800195649 seconds.\n"
      ]
     }
    ],
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +530,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Time spent inside the loop: 4.470772624999999 seconds.\n"
+      "Time spent inside the loop: 5.50822570011951 seconds.\n"
      ]
     }
    ],
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Time spent inside the loop: 1.1059027090000022 seconds.\n"
+      "Time spent inside the loop: 5.718883099965751 seconds.\n"
      ]
     }
    ],
@@ -601,14 +601,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of CPU cores on my machine: 8\n"
+      "Number of CPU cores on my machine: 4\n"
      ]
     }
    ],
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Time spent inside the loop: 4.548467917 seconds.\n"
+      "Time spent inside the loop: 6.358241900103167 seconds.\n"
      ]
     }
    ],
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Time spent inside the loop: 4.487030957999998 seconds.\n"
+      "Time spent inside the loop: 5.751369799952954 seconds.\n"
      ]
     }
    ],
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Time spent inside the loop: 1.0267589169999987 seconds.\n"
+      "Time spent inside the loop: 4.13271369994618 seconds.\n"
      ]
     }
    ],
@@ -740,15 +740,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0, 3, 6, 9, 1, 4, 7, 2, 5, 8, \n",
-      "(0, 1, 2, 3, 4, 5, 6, 7, 8, 9)\n"
+     "ename": "ValueError",
+     "evalue": "cannot find context for 'fork'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\HP\\OneDrive\\Desktop\\My_work\\content\\2.python\\2.python_advanced\\06.Concurrency\\concurrency.ipynb Cell 41'\u001b[0m in \u001b[0;36m<cell line: 11>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/HP/OneDrive/Desktop/My_work/content/2.python/2.python_advanced/06.Concurrency/concurrency.ipynb#ch0000040?line=7'>8</a>\u001b[0m             \u001b[39mprint\u001b[39m(\u001b[39mid\u001b[39m, end\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m, \u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/HP/OneDrive/Desktop/My_work/content/2.python/2.python_advanced/06.Concurrency/concurrency.ipynb#ch0000040?line=8'>9</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mid\u001b[39m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/HP/OneDrive/Desktop/My_work/content/2.python/2.python_advanced/06.Concurrency/concurrency.ipynb#ch0000040?line=10'>11</a>\u001b[0m \u001b[39mwith\u001b[39;00m get_context(\u001b[39m\"\u001b[39;49m\u001b[39mfork\u001b[39;49m\u001b[39m\"\u001b[39;49m)\u001b[39m.\u001b[39mPool() \u001b[39mas\u001b[39;00m pool: \u001b[39m# get_context(\"fork\"). Seems necessary on my M1 mac, otherwise the code hangs. Try the normal Pool() first. \u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/HP/OneDrive/Desktop/My_work/content/2.python/2.python_advanced/06.Concurrency/concurrency.ipynb#ch0000040?line=11'>12</a>\u001b[0m     res \u001b[39m=\u001b[39m \u001b[39mtuple\u001b[39m(pool\u001b[39m.\u001b[39mmap(task, \u001b[39mrange\u001b[39m(\u001b[39m71\u001b[39m))) \u001b[39m# Any number. May require a few tries to show different outputs.\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/HP/OneDrive/Desktop/My_work/content/2.python/2.python_advanced/06.Concurrency/concurrency.ipynb#ch0000040?line=13'>14</a>\u001b[0m \u001b[39mprint\u001b[39m()\n",
+      "File \u001b[1;32mC:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.10_3.10.1264.0_x64__qbz5n2kfra8p0\\lib\\multiprocessing\\context.py:239\u001b[0m, in \u001b[0;36mDefaultContext.get_context\u001b[1;34m(self, method)\u001b[0m\n\u001b[0;32m    <a href='file:///c%3A/Program%20Files/WindowsApps/PythonSoftwareFoundation.Python.3.10_3.10.1264.0_x64__qbz5n2kfra8p0/lib/multiprocessing/context.py?line=236'>237</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_actual_context\n\u001b[0;32m    <a href='file:///c%3A/Program%20Files/WindowsApps/PythonSoftwareFoundation.Python.3.10_3.10.1264.0_x64__qbz5n2kfra8p0/lib/multiprocessing/context.py?line=237'>238</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> <a href='file:///c%3A/Program%20Files/WindowsApps/PythonSoftwareFoundation.Python.3.10_3.10.1264.0_x64__qbz5n2kfra8p0/lib/multiprocessing/context.py?line=238'>239</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49mget_context(method)\n",
+      "File \u001b[1;32mC:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.10_3.10.1264.0_x64__qbz5n2kfra8p0\\lib\\multiprocessing\\context.py:193\u001b[0m, in \u001b[0;36mBaseContext.get_context\u001b[1;34m(self, method)\u001b[0m\n\u001b[0;32m    <a href='file:///c%3A/Program%20Files/WindowsApps/PythonSoftwareFoundation.Python.3.10_3.10.1264.0_x64__qbz5n2kfra8p0/lib/multiprocessing/context.py?line=190'>191</a>\u001b[0m     ctx \u001b[39m=\u001b[39m _concrete_contexts[method]\n\u001b[0;32m    <a href='file:///c%3A/Program%20Files/WindowsApps/PythonSoftwareFoundation.Python.3.10_3.10.1264.0_x64__qbz5n2kfra8p0/lib/multiprocessing/context.py?line=191'>192</a>\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m:\n\u001b[1;32m--> <a href='file:///c%3A/Program%20Files/WindowsApps/PythonSoftwareFoundation.Python.3.10_3.10.1264.0_x64__qbz5n2kfra8p0/lib/multiprocessing/context.py?line=192'>193</a>\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39mcannot find context for \u001b[39m\u001b[39m%r\u001b[39;00m\u001b[39m'\u001b[39m \u001b[39m%\u001b[39m method) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39m\n\u001b[0;32m    <a href='file:///c%3A/Program%20Files/WindowsApps/PythonSoftwareFoundation.Python.3.10_3.10.1264.0_x64__qbz5n2kfra8p0/lib/multiprocessing/context.py?line=193'>194</a>\u001b[0m ctx\u001b[39m.\u001b[39m_check_available()\n\u001b[0;32m    <a href='file:///c%3A/Program%20Files/WindowsApps/PythonSoftwareFoundation.Python.3.10_3.10.1264.0_x64__qbz5n2kfra8p0/lib/multiprocessing/context.py?line=194'>195</a>\u001b[0m \u001b[39mreturn\u001b[39;00m ctx\n",
+      "\u001b[1;31mValueError\u001b[0m: cannot find context for 'fork'"
      ]
     }
    ],
@@ -790,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -845,8 +850,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "486e0d5a79acdbfffd563ee7a67a93a5017bd2a4f66495483a69f0245c8a4a6c"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.4 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -860,7 +868,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
