--- a/content/3.data_tools/numPy/01.Drill_numpy.ipynb
+++ b/content/3.data_tools/numPy/01.Drill_numpy.ipynb
@@ -353,26 +353,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[0.5530493 , 0.56340977, 0.34704368],\n",
-       "        [0.74286226, 0.51874369, 0.63473276],\n",
-       "        [0.4455494 , 0.37717311, 0.7680506 ]],\n",
+       "array([[[0.25145757, 0.04624046, 0.30275702],\n",
+       "        [0.5633281 , 0.09152555, 0.63123317],\n",
+       "        [0.87186386, 0.2667621 , 0.20197701]],\n",
        "\n",
-       "       [[0.84485938, 0.37030491, 0.62366404],\n",
-       "        [0.48328801, 0.08699483, 0.8751649 ],\n",
-       "        [0.46673939, 0.367618  , 0.57508366]],\n",
+       "       [[0.17070347, 0.43005269, 0.98240457],\n",
+       "        [0.93830095, 0.18660945, 0.11381082],\n",
+       "        [0.43083063, 0.57829301, 0.47624705]],\n",
        "\n",
-       "       [[0.6462833 , 0.17032584, 0.34290241],\n",
-       "        [0.60087616, 0.34655321, 0.63654646],\n",
-       "        [0.09233947, 0.90246885, 0.2329859 ]]])"
+       "       [[0.55618395, 0.22505809, 0.8000193 ],\n",
+       "        [0.77969736, 0.18976349, 0.39998269],\n",
+       "        [0.90841079, 0.04209061, 0.28424116]]])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +397,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "minimum= 0.022011130798194944 maximum= 0.9894812470064529\n"
+      "minimum= 0.015101157060890102 maximum= 0.9962162817757578\n"
      ]
     }
    ],
@@ -416,19 +416,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.86075574 0.07566065 0.04503679 0.99544602 0.56274463 0.87459653\n",
-      " 0.27899545 0.42628053 0.12762482 0.67324231 0.60443101 0.47323402\n",
-      " 0.81987872 0.24953564 0.29322229 0.70939724 0.41596504 0.78087913\n",
-      " 0.35921398 0.15293072 0.9830756  0.23749073 0.8570844  0.77108616\n",
-      " 0.94557226 0.76827136 0.60287278 0.87701722 0.35065864 0.69378187]\n",
-      "mean= 0.5\n"
+      "[0.21627513 0.29032057 0.12591164 0.44682229 0.32998072 0.77338808\n",
+      " 0.79666301 0.84839878 0.69594864 0.59897581 0.97472749 0.34057144\n",
+      " 0.59189167 0.95158688 0.91303077 0.65775934 0.58967201 0.65858181\n",
+      " 0.95344968 0.54554936 0.84507899 0.83874927 0.47345724 0.93438518\n",
+      " 0.59802658 0.56924221 0.1520602  0.98810765 0.50706117 0.1429394 ]\n",
+      "mean= 0.5146475469904304\n"
      ]
     }
    ],
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -684,10 +684,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original array:\n",
+      "[[0.18551797 0.49537838 0.5022758 ]\n",
+      " [0.75479505 0.22495745 0.52768115]\n",
+      " [0.26332068 0.52433486 0.55970747]]\n",
+      "After normalization:\n",
+      "[[0.         0.54430509 0.55642119]\n",
+      " [1.         0.06927995 0.60104859]\n",
+      " [0.13666931 0.59517044 0.65730646]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=np.random.random((3,3))\n",
+    "print(\"Original array:\")\n",
+    "print(x)\n",
+    "x_min,x_max= x.min(),x.max()\n",
+    "x=(x-x_min)/(x_max-x_min)\n",
+    "print(\"After normalization:\")\n",
+    "print(x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -698,10 +721,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('r', 'u1'), ('g', 'u1'), ('b', 'u1'), ('a', 'u1')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "color=np.dtype([(\"r\",np.ubyte),(\"g\",np.ubyte),(\"b\",np.ubyte),(\"a\",np.ubyte)])\n",
+    "print(color)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -712,10 +746,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original arrays: [[0.17090061 0.71067793 0.01033944]\n",
+      " [0.15765535 0.70664485 0.46381808]\n",
+      " [0.01934665 0.800917   0.71882526]\n",
+      " [0.97268424 0.43439185 0.01475368]\n",
+      " [0.94399083 0.01454348 0.36812345]] [[0.12904342 0.4307205 ]\n",
+      " [0.59855267 0.16435735]\n",
+      " [0.42034582 0.41636321]]\n",
+      "Arrays with dot [[0.45177791 0.1947205 ]\n",
+      " [0.63827254 0.37716446]\n",
+      " [0.78404276 0.43926199]\n",
+      " [0.39172655 0.49649343]\n",
+      " [0.28526    0.56225959]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=np.random.random((5,3))\n",
+    "y=np.random.random((3,2))\n",
+    "print(\"Original arrays:\",x,y)\n",
+    "z=x.dot(y)\n",
+    "print(\"Arrays with dot\",z)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -726,10 +785,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10]\n",
+      "array after negate: [ 0  1  2  3 -4 -5 -6 -7  8  9 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=np.arange(11)\n",
+    "print(x)\n",
+    "x[(3<x)&(x<8)]*= -1\n",
+    "print(\"array after negate:\",x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -747,10 +820,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum(range(5),-1))\n",
+    "from numpy import *\n",
+    "print(sum(range(5),-1))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -769,10 +855,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[        1         1         4        27       256      3125     46656\n",
+      "    823543  16777216 387420489]\n",
+      "[  0   1   2   4   8  16  32  64 128 256]\n",
+      "[False False False False False False False False False False]\n",
+      "[0.+0.j 0.+1.j 0.+2.j 0.+3.j 0.+4.j 0.+5.j 0.+6.j 0.+7.j 0.+8.j 0.+9.j]\n",
+      "[0. 1. 2. 3. 4. 5. 6. 7. 8. 9.]\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\HP\\OneDrive\\Desktop\\My_work\\content\\3.data_tools\\numPy\\01.Drill_numpy.ipynb Cell 55'\u001b[0m in \u001b[0;36m<cell line: 7>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/HP/OneDrive/Desktop/My_work/content/3.data_tools/numPy/01.Drill_numpy.ipynb#ch0000054?line=4'>5</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m1\u001b[39mj\u001b[39m*\u001b[39mZ) \n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/HP/OneDrive/Desktop/My_work/content/3.data_tools/numPy/01.Drill_numpy.ipynb#ch0000054?line=5'>6</a>\u001b[0m \u001b[39mprint\u001b[39m(Z\u001b[39m/\u001b[39m\u001b[39m1\u001b[39m\u001b[39m/\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/HP/OneDrive/Desktop/My_work/content/3.data_tools/numPy/01.Drill_numpy.ipynb#ch0000054?line=6'>7</a>\u001b[0m \u001b[39mprint\u001b[39m(Z\u001b[39m<\u001b[39mZ\u001b[39m>\u001b[39mZ)\n",
+      "\u001b[1;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
+     ]
+    }
+   ],
+   "source": [
+    "Z=np.arange(10)\n",
+    "print(Z**Z) \n",
+    "print(2 << Z >> 2) \n",
+    "print(Z <- Z) \n",
+    "print(1j*Z) \n",
+    "print(Z/1/1)\n",
+    "print(Z<Z>Z) "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -788,10 +906,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nan\n",
+      "0\n",
+      "[-2.14748365e+09]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_10500\\3912170336.py:1: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  print(np.array(0) / np.array(0))\n",
+      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_10500\\3912170336.py:2: RuntimeWarning: divide by zero encountered in floor_divide\n",
+      "  print(np.array(0) // np.array(0))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.array(0) / np.array(0))\n",
+    "print(np.array(0) // np.array(0))\n",
+    "print(np.array([np.nan]).astype(int).astype(float))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -802,10 +944,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.06872389 0.76462294 0.12093608]\n",
+      "  [0.48170771 0.3223326  0.52694514]]]\n",
+      "[[[0. 1. 0.]\n",
+      "  [0. 0. 1.]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=np.random.random((1,2,3))\n",
+    "print(x)\n",
+    "y=np.round(x,0)\n",
+    "print(y)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -816,10 +974,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20 50 70]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr1=[10,20,30,40,50,60,70]\n",
+    "arr2=[20,80,50,70,90]\n",
+    "common=np.intersect1d(arr1,arr2)\n",
+    "print(common)"
+   ]
   }
  ],
  "metadata": {
