--- a/content/2.python/2.python_advanced/06.Concurrency/drills_concurrency.ipynb
+++ b/content/2.python/2.python_advanced/06.Concurrency/drills_concurrency.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -26,28 +26,29 @@
      "output_type": "stream",
      "text": [
       "<class '_io.TextIOWrapper'>\n",
-      "Sonnet II\n",
+      "Sonnet III\n",
       "\n",
       "\n",
-      "When forty winters shall beseige thy brow,\n",
-      "And dig deep trenches in thy beauty's field,\n",
-      "Thy youth's proud livery, so gazed on now,\n",
-      "Will be a tatter'd weed, of small worth held:\n",
-      "Then being ask'd where all thy beauty lies,\n",
-      "Where all the treasure of thy lusty days,\n",
-      "To say, within thine own deep-sunken eyes,\n",
-      "Were an all-eating shame and thriftless praise.\n",
-      "How much more praise deserved thy beauty's use,\n",
-      "If thou couldst answer 'This fair child of mine\n",
-      "Shall sum my count and make my old excuse,'\n",
-      "Proving his beauty by succession thine!\n",
-      "This were to be new made when thou art old,\n",
-      "And see thy blood warm when thou feel'st it cold.\n",
+      "Look in thy glass, and tell the face thou viewest\n",
+      "Now is the time that face should form another;\n",
+      "Whose fresh repair if now thou not renewest,\n",
+      "Thou dost beguile the world, unbless some mother.\n",
+      "For where is she so fair whose unear'd womb\n",
+      "Disdains the tillage of thy husbandry?\n",
+      "Or who is he so fond will be the tomb\n",
+      "Of his self-love, to stop posterity?\n",
+      "Thou art thy mother's glass, and she in thee\n",
+      "Calls back the lovely April of her prime:\n",
+      "So thou through windows of thine age shall see\n",
+      "Despite of wrinkles this thy golden time.\n",
+      "But if thou live, remember'd not to be,\n",
+      "Die single, and thine image dies with thee.\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "import threading\n",
     "with threading.Lock() as lock:\n",
     "        file='data_part_3.txt'\n",
     "        correctName = (f\"./data/{file}\")\n",
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
