--- a/content/3.data_tools/pandas/01.drill/pandas_exercises/05_Merge/Auto_MPG/Exercises.ipynb
+++ b/content/3.data_tools/pandas/01.drill/pandas_exercises/05_Merge/Auto_MPG/Exercises.ipynb
@@ -64,11 +64,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\HP\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\IPython\\core\\interactiveshell.py:3397: FutureWarning: In a future version of pandas all arguments of read_csv except for the argument 'filepath_or_buffer' will be keyword-only.\n",
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "C:\\Users\\HP\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\IPython\\core\\interactiveshell.py:3397: FutureWarning: In a future version of pandas all arguments of read_csv except for the argument 'filepath_or_buffer' will be keyword-only.\n",
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -141,16 +151,6 @@
       "\n",
       "[200 rows x 9 columns]\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\HP\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\IPython\\core\\interactiveshell.py:3397: FutureWarning: In a future version of pandas all arguments of read_csv except for the argument 'filepath_or_buffer' will be keyword-only.\n",
-      "  exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "C:\\Users\\HP\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\IPython\\core\\interactiveshell.py:3397: FutureWarning: In a future version of pandas all arguments of read_csv except for the argument 'filepath_or_buffer' will be keyword-only.\n",
-      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
-     ]
     }
    ],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -374,7 +374,7 @@
        "[198 rows x 9 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -430,7 +430,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_14768\\3458682206.py:1: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_13232\\3458682206.py:1: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  cars=cars1.append(cars2)\n"
      ]
     },
@@ -634,7 +634,7 @@
        "[398 rows x 9 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,12 +653,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([46304, 45057, 21532, 38691, 37937, 66378, 57205, 33542, 41664,\n",
+       "       40596, 37434, 53385, 29981, 23901, 58219, 59383, 51391, 48518,\n",
+       "       23329, 48435, 65568, 36298, 56729, 66125, 45071, 63590, 22763,\n",
+       "       27894, 66128, 15442, 16785, 30747, 45794, 24000, 54646, 51238,\n",
+       "       57276, 28319, 38989, 63297, 66436, 61568, 70101, 47069, 53750,\n",
+       "       39357, 30960, 50968, 15489, 69653, 59813, 56085, 19983, 59953,\n",
+       "       23029, 59869, 37324, 65248, 62847, 67727, 24728, 16916, 27854,\n",
+       "       29870, 44773, 72344, 27564, 55345, 19962, 36815, 69366, 38076,\n",
+       "       52830, 59203, 45170, 42000, 27220, 35635, 18655, 23181, 66930,\n",
+       "       66793, 16418, 72239, 53353, 17185, 53071, 67688, 23983, 25716,\n",
+       "       64727, 47020, 55497, 72146, 43640, 35298, 31762, 51326, 56616,\n",
+       "       17572, 54713, 16745, 29562, 32472, 40424, 46963, 46666, 24354,\n",
+       "       59292, 60168, 51827, 43650, 62730, 39921, 31557, 71841, 70111,\n",
+       "       16221, 44201, 57710, 52697, 28763, 30263, 66972, 43708, 44994,\n",
+       "       56617, 18142, 25503, 34535, 68440, 38087, 36360, 57772, 34114,\n",
+       "       57304, 22706, 59464, 43352, 21796, 21380, 20058, 46342, 66707,\n",
+       "       51144, 54269, 64495, 27082, 35541, 45570, 45237, 55263, 43749,\n",
+       "       70533, 31353, 61799, 63181, 37156, 24396, 68585, 55945, 34726,\n",
+       "       53014, 59541, 32175, 16393, 46015, 15623, 61436, 64978, 71518,\n",
+       "       64720, 21552, 38227, 33259, 31244, 52129, 41246, 70307, 17462,\n",
+       "       21618, 70785, 62217, 36896, 51514, 45167, 56470, 44302, 15580,\n",
+       "       49204, 29762, 54823, 27518, 20369, 22320, 56792, 40244, 24734,\n",
+       "       50665, 36347, 16336, 26364, 41965, 52046, 18542, 26547, 21917,\n",
+       "       31659, 40071, 48058, 49518, 25912, 15181, 23759, 46669, 35646,\n",
+       "       38708, 46243, 15995, 23177, 63958, 68473, 48136, 23719, 60578,\n",
+       "       18878, 47717, 16550, 56120, 54872, 30898, 17859, 48429, 35016,\n",
+       "       51672, 53140, 70167, 31909, 59702, 69354, 17791, 16835, 40827,\n",
+       "       26864, 37631, 29380, 39019, 52253, 29278, 16595, 55623, 72737,\n",
+       "       63072, 20079, 56272, 43930, 71498, 48383, 33686, 46536, 66747,\n",
+       "       44466, 20353, 18575, 68376, 23767, 27116, 24014, 64722, 23327,\n",
+       "       36066, 27770, 19012, 45549, 45157, 72343, 16588, 66776, 72188,\n",
+       "       65346, 69838, 67603, 63258, 39677, 41894, 37482, 32901, 41981,\n",
+       "       26153, 37040, 16733, 44079, 40349, 38466, 30724, 37206, 20302,\n",
+       "       70880, 65423, 70383, 20440, 67916, 35790, 29228, 54125, 18215,\n",
+       "       44674, 38320, 71310, 39693, 66977, 21162, 29070, 38032, 50583,\n",
+       "       46347, 43726, 46171, 19958, 23131, 68901, 20948, 52694, 31960,\n",
+       "       48903, 65192, 64509, 36130, 44900, 40554, 50647, 33704, 57721,\n",
+       "       51676, 72397, 71313, 69769, 28849, 35303, 37770, 37084, 41669,\n",
+       "       26181, 50004, 70623, 54292, 39235, 22029, 51765, 38467, 30623,\n",
+       "       21009, 16737, 41966, 27003, 48318, 32235, 38748, 72156, 17163,\n",
+       "       58946, 40543, 37466, 59117, 60788, 25419, 44503, 61918, 67192,\n",
+       "       48775, 15019, 59211, 69691, 38137, 66447, 55988, 40609, 50229,\n",
+       "       56847, 24569, 15785, 64475, 24132, 58367, 18297, 31921, 24453,\n",
+       "       22182, 33278, 68381, 37664, 25006, 71412, 63202, 23304, 38737,\n",
+       "       55395, 26369])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nr_owners = np.random.randint(15000, high=73000, size=398, dtype= int)\n",
+    "nr_owners"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -669,12 +725,230 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model</th>\n",
+       "      <th>origin</th>\n",
+       "      <th>car</th>\n",
+       "      <th>owners</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>307</td>\n",
+       "      <td>130</td>\n",
+       "      <td>3504</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>chevrolet chevelle malibu</td>\n",
+       "      <td>46304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>350</td>\n",
+       "      <td>165</td>\n",
+       "      <td>3693</td>\n",
+       "      <td>11.5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>buick skylark 320</td>\n",
+       "      <td>45057</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>318</td>\n",
+       "      <td>150</td>\n",
+       "      <td>3436</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>plymouth satellite</td>\n",
+       "      <td>21532</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>16.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>304</td>\n",
+       "      <td>150</td>\n",
+       "      <td>3433</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>amc rebel sst</td>\n",
+       "      <td>38691</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>17.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>302</td>\n",
+       "      <td>140</td>\n",
+       "      <td>3449</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ford torino</td>\n",
+       "      <td>37937</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195</th>\n",
+       "      <td>27.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>140</td>\n",
+       "      <td>86</td>\n",
+       "      <td>2790</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>82</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ford mustang gl</td>\n",
+       "      <td>63202</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>44.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>97</td>\n",
+       "      <td>52</td>\n",
+       "      <td>2130</td>\n",
+       "      <td>24.6</td>\n",
+       "      <td>82</td>\n",
+       "      <td>2</td>\n",
+       "      <td>vw pickup</td>\n",
+       "      <td>23304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>32.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>135</td>\n",
+       "      <td>84</td>\n",
+       "      <td>2295</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>82</td>\n",
+       "      <td>1</td>\n",
+       "      <td>dodge rampage</td>\n",
+       "      <td>38737</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>28.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>120</td>\n",
+       "      <td>79</td>\n",
+       "      <td>2625</td>\n",
+       "      <td>18.6</td>\n",
+       "      <td>82</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ford ranger</td>\n",
+       "      <td>55395</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199</th>\n",
+       "      <td>31.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>119</td>\n",
+       "      <td>82</td>\n",
+       "      <td>2720</td>\n",
+       "      <td>19.4</td>\n",
+       "      <td>82</td>\n",
+       "      <td>1</td>\n",
+       "      <td>chevy s-10</td>\n",
+       "      <td>26369</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>398 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      mpg  cylinders  displacement horsepower  weight  acceleration  model  \\\n",
+       "0    18.0          8           307        130    3504          12.0     70   \n",
+       "1    15.0          8           350        165    3693          11.5     70   \n",
+       "2    18.0          8           318        150    3436          11.0     70   \n",
+       "3    16.0          8           304        150    3433          12.0     70   \n",
+       "4    17.0          8           302        140    3449          10.5     70   \n",
+       "..    ...        ...           ...        ...     ...           ...    ...   \n",
+       "195  27.0          4           140         86    2790          15.6     82   \n",
+       "196  44.0          4            97         52    2130          24.6     82   \n",
+       "197  32.0          4           135         84    2295          11.6     82   \n",
+       "198  28.0          4           120         79    2625          18.6     82   \n",
+       "199  31.0          4           119         82    2720          19.4     82   \n",
+       "\n",
+       "     origin                        car  owners  \n",
+       "0         1  chevrolet chevelle malibu   46304  \n",
+       "1         1          buick skylark 320   45057  \n",
+       "2         1         plymouth satellite   21532  \n",
+       "3         1              amc rebel sst   38691  \n",
+       "4         1                ford torino   37937  \n",
+       "..      ...                        ...     ...  \n",
+       "195       1            ford mustang gl   63202  \n",
+       "196       2                  vw pickup   23304  \n",
+       "197       1              dodge rampage   38737  \n",
+       "198       1                ford ranger   55395  \n",
+       "199       1                 chevy s-10   26369  \n",
+       "\n",
+       "[398 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cars['owners'] = nr_owners.tolist()\n",
+    "cars"
+   ]
   }
  ],
  "metadata": {
